--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,10 @@
-version: '3.5'
+version: '3'
 
 services:
   
-  sample-app:
-    container_name: sample-app
+  client:
     image: momojunzi/baguaclient:latest
-    build:
-      context: .
-      dockerfile: Dockerfile
     volumes:
       - '.:/usr/src/app'
-      - '/usr/src/app/node_modules'
     ports:
       - '3000:3000'
